// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/affix/demo/basic.md correctly 1`] = `
<div>
  <div>
    <div
      class=""
    >
      <button
        class="ant-btn ant-btn-primary ant-btn-flat"
        type="button"
      >
        <span>
          Affix top
        </span>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </div>
  </div>
  <br />
  <div>
    <div
      class=""
    >
      <button
        class="ant-btn ant-btn-primary ant-btn-flat"
        type="button"
      >
        <span>
          Affix bottom
        </span>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/affix/demo/on-change.md correctly 1`] = `
<div>
  <div
    class=""
  >
    <button
      class="ant-btn ant-btn-flat"
      type="button"
    >
      <span>
        120px to affix top
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/affix/demo/target.md correctly 1`] = `
<div
  class="scrollable-container"
>
  <div
    class="background"
  >
    <div>
      <div
        class=""
      >
        <button
          class="ant-btn ant-btn-primary ant-btn-flat"
          type="button"
        >
          <span>
            Fixed at the top of container
          </span>
          <div
            class="ant-ripple-wrapper"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
